libdtrace: Stop relying on lex compatibility

It does not appear to be required, and as of commit 6b7e592c215f
("lex: Do not let input() return 0 when end-of-file is reached") it
causes input to return 0 instead of EOF when end-of-input is reached.

PR:		253440
Sponsored by:	The FreeBSD Foundation

(cherry picked from commit 8ba333e02eaa59337a4e1d5534d4e894344c8226)